--- a/css/release.1080.css
+++ b/css/release.1080.css
@@ -1,6 +1,9 @@
-/* mag-component-value-list: release */
-.component.valueList {
+.mag-component-footer {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     border: 3 solid grey;
     text-align: center; }
-    .component.valueList.focus {
+    .mag-component-footer.hidden {
+        display: none; }
+    .mag-component-footer.focus {
         border-color: orange; }
