rework classes conception (with fixed dependencies)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 @import "body";
 @import "../node_modules/stb-component/sass/main";
 
-.mag-component-footer {
+.mag-component-value-list {
     @include stb-component-release;
     @include mag-component-value-list;
 
