--- a/css/develop.1080.css
+++ b/css/develop.1080.css
@@ -1,13 +1,13 @@
-.mag-component-footer {
+.mag-component-value-list {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 3 solid grey;
     text-align: center;
     outline: 1px dashed #005000;
     outline-offset: -1px; }
-    .mag-component-footer.hidden {
+    .mag-component-value-list.hidden {
         display: none; }
-    .mag-component-footer.focus {
+    .mag-component-value-list.focus {
         border-color: orange; }
-    .mag-component-footer.focus {
+    .mag-component-value-list.focus {
         outline: 1px dashed red; }
