--- a/css/release.576.css
+++ b/css/release.576.css
@@ -1,9 +1,9 @@
-.mag-component-footer {
+.mag-component-value-list {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid grey;
     text-align: center; }
-    .mag-component-footer.hidden {
+    .mag-component-value-list.hidden {
         display: none; }
-    .mag-component-footer.focus {
+    .mag-component-value-list.focus {
         border-color: orange; }
