fix copyrights to its original state

--- a/sass/vars/720.scss
+++ b/sass/vars/720.scss
@@ -1,4 +1,4 @@
 // @license The MIT License (MIT)
-// @copyright Stanislav Kalashnik <darkpark.main@gmail.com>
+// @copyright Aleynikov Boris <alynikov.boris@gmail.com>
 
 $inputBorder: 2px;
