--- a/sass/vars/1080.scss
+++ b/sass/vars/1080.scss
@@ -1,4 +1,4 @@
 // @license The MIT License (MIT)
-// @copyright Aleynikov Boris <alynikov.boris@gmail.com>
+// @copyright Boris Aleynikov <aleynikov.boris@gmail.com>
 
 $inputBorder: 2 * 1.5;
